qnd: trying to fix table alignment
git-svn-id: svn+ssh://kelev.kaltura.com/usr/local/kalsource/front/workspaces/kmc/trunk@82737 6b8eccd3-e8c5-4e7d-8186-e12b5326b719

--- a/KMC/assets/kmc_skin.css
+++ b/KMC/assets/kmc_skin.css
@@ -3401,7 +3401,8 @@ VBox.whiteBg {
 }
 
 /* style for general item renderers in account module */
-HBox.simpleRenderer {
+VBox.simpleRenderer {
 	padding-left:4;
 	padding-right:4;
+	vertical-align:middle; 
 }
